[package]
name = "bongocat-rs"
version = "0.1.0"
authors = ["CanadianBacon <bc.bacon.bits@gmail.com>"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.89.0"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    #"accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
display-info = "0.5.4"
egui_extras = {version = "0.31", features = ["all_loaders"]}
inputbot = { version = "0.6.0", features = ["serde"] }
dashmap = {version = "7.0.0-rc2", features = ["serde"]}
parking_lot = {version = "0.12.3", features = ["serde"]}
enum-map = {version = "3.0.0-beta.2", features = ["serde"]}

# You only need serde if you want app persistence:
serde = { version = "1.0.219", features = ["derive"] }
image = {version = "0.25.6", features = ["serde"]}
anyhow = "1.0.98"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
egui = { git = "https://github.com/emilk/egui", branch = "main" }
eframe = { git = "https://github.com/emilk/egui", branch = "main" }
egui_extras = { git = "https://github.com/emilk/egui", branch = "main" }
inputbot = { path = "lib/InputBot" }
enum-map = { path = "lib/enum-map/enum-map" }